--- a/package.json
+++ b/package.json
@@ -2,5 +2,5 @@
   "name": "cra-template-projectdiscovery",
   "version": "1.0.2",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
 }
